--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,86 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+input,
+textarea,
+select,
+button {
+    font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+    font-size: 14px;
+    line-height: 1.5;
+}
+/* TODO: use a nice reset script */
+input:not([type]),
+input[type='email' i],
+input[type='number' i],
+input[type='password' i],
+input[type='tel' i],
+input[type='url' i],
+input[type='text' i] {
+    padding: 0;
+}
+body {
+    margin: 0;
+}
+html,
+body,
+.du-view {
+    height: 100%;
+}
+
+.du-center {
+    text-align: center;
+}
+
+.du-view {
+    display: grid;
+    grid-template-columns: 1;
+    grid-template-rows: 100px 1fr;
+}
+.du-view-title {
+    grid-row: 1;
+    text-align: center;
+}
+.du-view-content {
+    grid-row: 2;
+    display: grid;
+    grid-template-columns: 1;
+    grid-template-rows: 1fr 50px;
+}
+.du-log {
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 16px;
+    border: 1px solid #ddd;
+    background-color: #fafafa;
+    padding: 10px;
+    grid-row: 1;
+}
+.du-command {
+    grid-row: 2;
+    position: relative;
+    background-color: #333;
+    padding: 5px;
+    letter-spacing: 2px;
+}
+.du-command-value {
+    background-color: transparent;
+    color: #ddd;
+    border: none;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    letter-spacing: inherit;
+}
+.du-command-suggestion {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 5px;
+    line-height: 42px;
+    color: #666;
+}
+:focus {
+    outline: none;
+}
