action menu and universe service to spawn creatures, refactor styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,6 @@
                    class="du-command-value"
                    (keydown)="commandKeyDown($event)" />
         </div>
+        <app-action-menu></app-action-menu>
     </div>
 </div>
