--- a/src/styles.css
+++ b/src/styles.css
@@ -22,65 +22,73 @@ body {
     margin: 0;
 }
 html,
-body,
-.du-view {
+body {
     height: 100%;
-}
-
-.du-center {
-    text-align: center;
-}
-
-.du-view {
-    display: grid;
-    grid-template-columns: 1;
-    grid-template-rows: 100px 1fr;
-}
-.du-view-title {
-    grid-row: 1;
-    text-align: center;
-}
-.du-view-content {
-    grid-row: 2;
-    display: grid;
-    grid-template-columns: 1;
-    grid-template-rows: 1fr 50px;
-}
-.du-log {
-    width: 100%;
-    box-sizing: border-box;
-    font-size: 16px;
-    border: 1px solid #ddd;
-    background-color: #fafafa;
-    padding: 10px;
-    grid-row: 1;
-}
-.du-command {
-    grid-row: 2;
-    position: relative;
-    background-color: #333;
-    padding: 5px;
-    letter-spacing: 2px;
-}
-.du-command-value {
-    background-color: transparent;
-    color: #ddd;
-    border: none;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    letter-spacing: inherit;
-}
-.du-command-suggestion {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding: 5px;
-    line-height: 42px;
-    color: #666;
+    background-color: #444;
+    color: #ccc;
 }
 :focus {
     outline: none;
+}
+
+.app-button-round {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    border: none;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+    background-color: #26c6da;
+    cursor: pointer;
+    color: #fff;
+}
+
+/* Material style (from https://codepen.io/lehollandaisvolant/pen/dMQXYX) */
+/* button {
+    border: none;
+    cursor: pointer;
+    color: white;
+    padding: 15px 40px;
+    border-radius: 2px;
+    font-size: 22px;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+    background: #2196f3;
+} */
+
+/* Ripple magic */
+button {
+    position: relative;
+    overflow: hidden;
+}
+
+button:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 5px;
+    height: 5px;
+    background: rgba(255, 255, 255, 0.5);
+    opacity: 0;
+    border-radius: 100%;
+    transform: scale(1, 1) translate(-50%);
+    transform-origin: 50% 50%;
+}
+
+@keyframes ripple {
+    0% {
+        transform: scale(0, 0);
+        opacity: 1;
+    }
+    20% {
+        transform: scale(25, 25);
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: scale(40, 40);
+    }
+}
+
+button:focus:not(:active)::after {
+    animation: ripple 1s ease-out;
 }
