--- a/src/app/shared/components/action-menu/action-menu.component.css
+++ b/src/app/shared/components/action-menu/action-menu.component.css
@@ -4,3 +4,13 @@
 .app-am-stats {
     margin-bottom: 20px;
 }
+table {
+    width: 100%;
+    padding: 0 20px;
+}
+tr > td:first-child {
+    text-align: left;
+}
+tr > td:last-child {
+    text-align: right;
+}
