introduce death via default and child mortality distribution

--- a/src/app/shared/components/action-menu/action-menu.component.html
+++ b/src/app/shared/components/action-menu/action-menu.component.html
@@ -7,6 +7,22 @@
             </tr>
         </table>
     </div>
+    <div>
+        <ngx-charts-line-chart [view]="view"
+                               [scheme]="colorScheme"
+                               [results]="chartData"
+                               [gradient]="gradient"
+                               [xAxis]="showXAxis"
+                               [yAxis]="showYAxis"
+                               [legend]="showLegend"
+                               [showXAxisLabel]="showXAxisLabel"
+                               [showYAxisLabel]="showYAxisLabel"
+                               [xAxisLabel]="xAxisLabel"
+                               [yAxisLabel]="yAxisLabel"
+                               [autoScale]="autoScale"
+                               (select)="onSelect($event)">
+        </ngx-charts-line-chart>
+    </div>
     <button class="app-button-round"
             (click)="spawnCreature()">Spawn creature</button>
 </div>
