refactor line chart component interface

--- a/src/app/shared/components/action-menu/action-menu.component.html
+++ b/src/app/shared/components/action-menu/action-menu.component.html
@@ -9,5 +9,5 @@
             </tr>
         </table>
     </div>
-    <app-line-chart [chartData]="chartData"></app-line-chart>
+    <app-line-chart [chartConfig]="chartConfig"></app-line-chart>
 </div>
