--- a/src/app/shared/components/line-chart/line-chart.component.html
+++ b/src/app/shared/components/line-chart/line-chart.component.html
@@ -1,14 +1,12 @@
-<ngx-charts-line-chart [view]="view"
-                       [scheme]="colorScheme"
-                       [results]="chartData"
-                       [gradient]="gradient"
-                       [xAxis]="showXAxis"
-                       [yAxis]="showYAxis"
-                       [legend]="showLegend"
-                       [showXAxisLabel]="showXAxisLabel"
-                       [showYAxisLabel]="showYAxisLabel"
-                       [xAxisLabel]="xAxisLabel"
-                       [yAxisLabel]="yAxisLabel"
-                       [autoScale]="autoScale"
-                       (select)="onSelect($event)">
+<ngx-charts-line-chart [view]="chartConfig.view"
+                       [scheme]="chartConfig.colorScheme"
+                       [results]="chartConfig.data"
+                       [gradient]="chartConfig.gradient"
+                       [xAxis]="chartConfig.showXAxis"
+                       [yAxis]="chartConfig.showYAxis"
+                       [legend]="chartConfig.showLegend"
+                       [showXAxisLabel]="chartConfig.showXAxisLabel"
+                       [showYAxisLabel]="chartConfig.showYAxisLabel"
+                       [xAxisLabel]="chartConfig.xAxisLabel"
+                       [yAxisLabel]="chartConfig.yAxisLabel">
 </ngx-charts-line-chart>
