pregnancy distribution chart

--- a/src/app/shared/components/action-menu/action-menu.component.html
+++ b/src/app/shared/components/action-menu/action-menu.component.html
@@ -14,6 +14,10 @@
         <app-line-chart [chartConfig]="charts.ageDistribution"></app-line-chart>
     </div>
     <div>
+        <h3>Pregnancy distribution</h3>
+        <app-line-chart [chartConfig]="charts.pregnancyDistribution"></app-line-chart>
+    </div>
+    <div>
         <h3>Causes of death</h3>
         <h4>Default mortality due to age</h4>
         <app-line-chart [chartConfig]="charts.defaultMortalityDistribution"></app-line-chart>
